# spotify-backup

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/spotify_backup/: auth.py  backup.py  cli.py  config.py  m3u.py  models.py  service.py  spotify.py  store_links.py
tests/: test_m3u.py  test_store_links.py
