[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "spotify-backup"
version = "0.1.0"
description = "Back up Spotify playlists to JSON and M3U with legal purchase search links."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
authors = [{ name = "spotify-backup contributors" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
]

[project.scripts]
spotify-backup = "spotify_backup.cli:app"

[tool.poetry]
packages = [{ include = "spotify_backup", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.5.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
